// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExtensionViewContainer /> when in broadcaster config mode renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionViewContainer
    deleteExtensionViewHandler={[Function]}
    extension={
        Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "viewerUrl": "test",
                "zoom": false,
              },
              "config": Object {
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "viewerUrl": "test",
              },
              "panel": Object {
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    extensionViews={Array []}
    mode="config"
    openEditViewHandler={[Function]}
    openExtensionViewHandler={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "config",
    "nodeType": "class",
    "props": Object {
      "extension": Object {
        "authorName": "test",
        "channelId": "channelId",
        "description": "description",
        "iconUrl": "icon_url",
        "id": "id",
        "name": "name",
        "requestIdentity": false,
        "sku": "sku",
        "state": "state",
        "summary": "summary",
        "token": "token",
        "vendorCode": "vendorCode",
        "version": "0.1",
        "views": Object {
          "component": Object {
            "aspectHeight": 3000,
            "aspectWidth": 2500,
            "viewerUrl": "test",
            "zoom": false,
          },
          "config": Object {
            "viewerUrl": "test",
          },
          "liveConfig": Object {
            "viewerUrl": "test",
          },
          "panel": Object {
            "viewerUrl": "test",
          },
        },
        "whitelistedConfigUrls": Array [
          "foo",
        ],
        "whitelistedPanelUrls": Array [
          "bar",
        ],
      },
      "id": "config",
      "mode": "config",
      "type": "config",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "config",
      "nodeType": "class",
      "props": Object {
        "extension": Object {
          "authorName": "test",
          "channelId": "channelId",
          "description": "description",
          "iconUrl": "icon_url",
          "id": "id",
          "name": "name",
          "requestIdentity": false,
          "sku": "sku",
          "state": "state",
          "summary": "summary",
          "token": "token",
          "vendorCode": "vendorCode",
          "version": "0.1",
          "views": Object {
            "component": Object {
              "aspectHeight": 3000,
              "aspectWidth": 2500,
              "viewerUrl": "test",
              "zoom": false,
            },
            "config": Object {
              "viewerUrl": "test",
            },
            "liveConfig": Object {
              "viewerUrl": "test",
            },
            "panel": Object {
              "viewerUrl": "test",
            },
          },
          "whitelistedConfigUrls": Array [
            "foo",
          ],
          "whitelistedPanelUrls": Array [
            "bar",
          ],
        },
        "id": "config",
        "mode": "config",
        "type": "config",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExtensionViewContainer /> when in live config mode renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionViewContainer
    deleteExtensionViewHandler={[Function]}
    extension={
        Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "viewerUrl": "test",
                "zoom": false,
              },
              "config": Object {
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "viewerUrl": "test",
              },
              "panel": Object {
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    extensionViews={Array []}
    mode="dashboard"
    openEditViewHandler={[Function]}
    openExtensionViewHandler={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "dashboard",
    "nodeType": "class",
    "props": Object {
      "extension": Object {
        "authorName": "test",
        "channelId": "channelId",
        "description": "description",
        "iconUrl": "icon_url",
        "id": "id",
        "name": "name",
        "requestIdentity": false,
        "sku": "sku",
        "state": "state",
        "summary": "summary",
        "token": "token",
        "vendorCode": "vendorCode",
        "version": "0.1",
        "views": Object {
          "component": Object {
            "aspectHeight": 3000,
            "aspectWidth": 2500,
            "viewerUrl": "test",
            "zoom": false,
          },
          "config": Object {
            "viewerUrl": "test",
          },
          "liveConfig": Object {
            "viewerUrl": "test",
          },
          "panel": Object {
            "viewerUrl": "test",
          },
        },
        "whitelistedConfigUrls": Array [
          "foo",
        ],
        "whitelistedPanelUrls": Array [
          "bar",
        ],
      },
      "id": "dashboard",
      "mode": "dashboard",
      "type": "liveConfig",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "dashboard",
      "nodeType": "class",
      "props": Object {
        "extension": Object {
          "authorName": "test",
          "channelId": "channelId",
          "description": "description",
          "iconUrl": "icon_url",
          "id": "id",
          "name": "name",
          "requestIdentity": false,
          "sku": "sku",
          "state": "state",
          "summary": "summary",
          "token": "token",
          "vendorCode": "vendorCode",
          "version": "0.1",
          "views": Object {
            "component": Object {
              "aspectHeight": 3000,
              "aspectWidth": 2500,
              "viewerUrl": "test",
              "zoom": false,
            },
            "config": Object {
              "viewerUrl": "test",
            },
            "liveConfig": Object {
              "viewerUrl": "test",
            },
            "panel": Object {
              "viewerUrl": "test",
            },
          },
          "whitelistedConfigUrls": Array [
            "foo",
          ],
          "whitelistedPanelUrls": Array [
            "bar",
          ],
        },
        "id": "dashboard",
        "mode": "dashboard",
        "type": "liveConfig",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExtensionViewContainer /> when in viewer mode renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionViewContainer
    deleteExtensionViewHandler={[Function]}
    extension={
        Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "viewerUrl": "test",
                "zoom": false,
              },
              "config": Object {
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "viewerUrl": "test",
              },
              "panel": Object {
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    extensionViews={Array []}
    mode="viewer"
    openEditViewHandler={[Function]}
    openExtensionViewHandler={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="view-container"
>
          
</div>,
        <div>
          <ExtensionViewButton
                    onClick={[Function]}
          />
</div>,
      ],
      "className": "view-container-wrapper",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [],
          "className": "view-container",
        },
        "ref": null,
        "rendered": Array [],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionViewButton
            onClick={[Function]}
/>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="view-container"
>
            
</div>,
          <div>
            <ExtensionViewButton
                        onClick={[Function]}
            />
</div>,
        ],
        "className": "view-container-wrapper",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
            "className": "view-container",
          },
          "ref": null,
          "rendered": Array [],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ExtensionViewButton
              onClick={[Function]}
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
